<resources>
    <string name="app_name">Hachiman</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>
    <string name="password">PASSWORD</string>
    <string name="usn">USN</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="email">EMAIL</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="signout">SignOut</string>
    <string name="textaf">TextAF</string>
    <string name="section">SECTION</string>
    <string name="enter_the_received_code">Enter the received code</string>
    <string name="submit">Submit</string>
    <string name="add_event">Add Event</string>
    <string name="select_option">Select Option</string>
    <string name="already_registered">Already Registered</string>
    <string name="unregister">Unregister</string>
    <string name="signing_out">Signing Out...</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="sem">Sem</string>
    <string name="choose">Choose</string>
    <string name="semester">SEMESTER</string>
    <string name="sec">Section</string>
    <string name="previous_course">Previous Course</string>
    <string name="first_choice">First Choice</string>
    <string name="second_choice">Second Choice</string>
    <string name="third_choice">Third Choice</string>
    <string name="available">Available</string>
    <string name="name_cap">NAME</string>
    <string-array name="previous_and_current">
        <item>Previous</item>
        <item>Current</item>
    </string-array>
</resources>